# OutilEEQ

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Chip.tsx  Field.tsx  Kpi.tsx  PdfDeposit.tsx  Rail.tsx  Stepper.tsx  Toast.tsx  Topbar.tsx  ZBar.tsx
src/config/: bioprospective.ts  biorad.ts  probioqual.ts  seed.ts
src/data/calendriers/: biologieprospective2026.ts  index.ts  probioqual2026.ts
src/domain/: alerte.ts  dates.ts  dedup.ts  reapprovisionnement.ts  tri.ts  types.ts  urgence.ts  vues.ts
src/domain/__tests__/: alerte.test.ts  dedup.test.ts  reapprovisionnement.test.ts  tri.test.ts  urgence.test.ts  vues.test.ts
src/domain/config/: seuils.ts
src/features/admin/: AdminGate.tsx  AdminView.tsx  AttributionProgrammes.tsx
src/features/dashboard/: BandeauAlerte.tsx  BandeauReappro.tsx  Dashboard.tsx  (+7 more)
src/logic/: calculations.ts  campagneStatus.ts  enqueteStatus.ts  ficheStatus.ts
src/store/: backup.ts  db.ts  factories.ts  fusion.ts  seed.ts  selectors.ts  sync.ts  useNav.ts  useStore.ts  useToast.ts
src/styles/: theme.css
src/theme/: tokens.ts
src/types/: models.ts
src/ui/: Carte.tsx  EnTete.tsx  Kpi.tsx  Pastille.tsx  SelectMulti.tsx  icones.tsx
src/utils/: format.ts  id.ts  portability.ts
src/views/: AutomateView.tsx  ConfigCalendriers.tsx  Dashboard.tsx  EnqueteView.tsx  FicheView.tsx  Planning.tsx
(+14 files in other folders)
