[package]
name = "suivi-eeq"
version = "1.0.0"
description = "Suivi local des EEQ d'un laboratoire de biologie médicale"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "suivi_eeq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
